# CGUnisinos

M1_Triangulo/: CMakeCache.txt  CMakeLists.txt  Makefile  RESULT.md  app  cmake_install.cmake  compile_commands.json
M1_Triangulo/Triangulo/: Origem.cpp
M1_Triangulo/include/glad/: glad.h
M2_Cubo/: CMakeCache.txt  CMakeLists.txt  Makefile  app  cmake_install.cmake  compile_commands.json
M2_Cubo/Cubo/: Origem.cpp  shader.cpp
M2_Cubo/include/: shader.h
M2_Cubo/shaders/: fragment.glsl  vertex.glsl
M3_Testuras/: CMakeLists.txt
M3_Testuras/Testuras/: Origem.cpp
M3_Texturas/: CMakeLists.txt  RESULT.md
M3_Texturas/shaders/: sprite.fs  sprite.vs
M4_Iluminacao/: CMakeLists.txt  app
M4_Iluminacao/Iluminacao/: Origem.cpp  Phong.fs
M5_Camera/: CMakeLists.txt
M5_Camera/Camera/: Origem.cpp  Phong.vs
M6_Trajetoria-Objeto/: CMakeLists.txt  app
M6_Trajetoria-Objeto/.cache/clangd/index/: Bezier.cpp.8BC896B6F5DF6600.idx  Bezier.h.3D94E275AD9BF218.idx  CatmullRom.cpp.430F40B6A8E207FF.idx  CatmullRom.h.3456828C0589C390.idx  Curve.cpp.D895C83706FB86C1.idx  Curve.h.1E2A21321ECE117D.idx  Hermite.cpp.8FD2B6C7AD8542F4.idx  Hermite.h.A4391CA908AC3766.idx  Origem.cpp.DD85A19512A903B4.idx
M6_Trajetoria-Objeto/Curvas/: Origem.cpp  camera.fs  camera.vs
include/: Mesh.h
